--- a/styles.css
+++ b/styles.css
@@ -15,9 +15,17 @@ li a:hover {
     color: white;
 }
 .media {
-    position: absolute;
-    top: 40%;
-    left: 50%
+    color:black;
+    margin:20px;
+    text-decoration:none;
+    display:inline-block;
+    display: flex;
+    flex-direction:row;
+    justify-content: space-around;
+
+}
+.media:hover {
+  background-color: black;;
 }
 nav>ul>li
 {
@@ -66,16 +74,19 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     text-align: center;
+    color: white;
 }
 .empass {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     text-align: center;
+    color: white;
 }
 .empassi {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
     text-align: center;
+    color: white;
 }
 .empassiz {
     font-family: Arial, Helvetica, sans-serif;
@@ -122,4 +133,7 @@ a{
     color: white;
     font-size: 20px;
 
+}
+#well{
+    color: blue;
 }
