--- a/styles.css
+++ b/styles.css
@@ -290,6 +290,13 @@ img:hover
     font-size: 25px;
     font-style: italic;
     font-family: 'Literata', serif;
-    color: blue;
+    color: brown;
+}
+#re {
+    font-size: 25px;
+    font-style: italic;
+    font-family: 'Literata', serif;
+    color: brown;
+
 }
 
